Changed Type of alignments

--- a/RealMadrid/Cube3dEspa.html
+++ b/RealMadrid/Cube3dEspa.html
@@ -631,18 +631,18 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
 }
 /*#/#*//*#i4.i14.text.css:text/base/css*/
-#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family:'Source Sans Pro', sans-serif; font-size: 24px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: 10px;}
+#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: 'Source Sans Pro', sans-serif; font-size: 24px; color: #1d1d1d; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: 10px;}
 /*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
 #i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 285px; height: 74px;
-        -ms-transform: translate(-50%, -50%) translate(-10px, 74px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(-10px, 74px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(-10px, 74px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(-10px, 74px) rotate(0deg);
+        -ms-transform: translate(-50%, -50%) translate(0px, 74px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(0px, 74px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(0px, 74px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(0px, 74px) rotate(0deg);
 }
 /*#/#*//*#i4.i104.image.css:image/base/css*/
 #i104 { opacity: 1; }
 /*#/#*//*#i104.i105.positioning.css:positioning/base/css.1*/
-#i104 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 362px; height: 154px;
+#i104 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 369px; height: 157px;
         -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
@@ -652,10 +652,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i64 { opacity: 1;}
 /*#/#*//*#i64.i65.positioning.css:positioning/base/css.1*/
 #i64 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 87px; height: 28px;
-        -ms-transform: translate(0, 0) translate(240px, 216px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(240px, 216px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(240px, 216px) rotate(0deg);
-        transform: translate(0, 0) translate(240px, 216px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(208px, 216px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(208px, 216px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(208px, 216px) rotate(0deg);
+        transform: translate(0, 0) translate(208px, 216px) rotate(0deg);
 }
 /*#/#*//*#i4.i91.shape.css:shape/base/css*/
 #i91 { background-color: #dedede; opacity: 0.00;
@@ -682,18 +682,18 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
 /*#/#*//*#i5.i24.text.css:text/base/css*/
-#i24 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family:'Source Sans Pro', sans-serif; font-size: 22px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: 5px;}
+#i24 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: 'Source Sans Pro', sans-serif; font-size: 24px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: 10px;}
 /*#/#*//*#i24.i25.positioning.css:positioning/base/css.1*/
-#i24 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 300px; height: 72px;
-        -ms-transform: translate(-50%, -50%) translate(-10px, 68px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(-10px, 68px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(-10px, 68px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(-10px, 68px) rotate(0deg);
+#i24 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 271px; height: 72px;
+        -ms-transform: translate(-50%, -50%) translate(0px, 73px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(0px, 73px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(0px, 73px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(0px, 73px) rotate(0deg);
 }
 /*#/#*//*#i5.i58.image.css:image/base/css*/
-#i58 { opacity: 1; }
+#i58 { opacity: 1; }    
     
-#i58 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 362px; height: 154px;
+#i58 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 369px; height: 157px;
         -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
@@ -703,10 +703,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i66 { opacity: 1;}
 /*#/#*//*#i66.i67.positioning.css:positioning/base/css.1*/
 #i66 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 87px; height: 28px;
-        -ms-transform: translate(0, 0) translate(240px, 215px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(240px, 215px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(240px, 215px) rotate(0deg);
-        transform: translate(0, 0) translate(240px, 215px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(208px, 215px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(208px, 215px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(208px, 215px) rotate(0deg);
+        transform: translate(0, 0) translate(208px, 215px) rotate(0deg);
 }
 /*#/#*//*#i5.i95.shape.css:shape/base/css*/
 #i95 { background-color: #dedede; opacity: 0.00;
@@ -733,13 +733,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
 /*#/#*//*#i6.i34.text.css:text/base/css*/
-#i34 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family:'Source Sans Pro', sans-serif; font-size: 20px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: 5px;}
+#i34 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: 'Source Sans Pro', sans-serif; font-size: 19px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: 10px;}
 /*#/#*//*#i34.i35.positioning.css:positioning/base/css.1*/
-#i34 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 300px; height: 74px;
-        -ms-transform: translate(-50%, -50%) translate(-10px, 70px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(-10px, 70px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(-10px, 70px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(-10px, 70px) rotate(0deg);
+#i34 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 285px; height: 74px;
+        -ms-transform: translate(-50%, -50%) translate(3px, 70px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(3px, 70px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(3px, 70px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(3px, 70px) rotate(0deg);
 }
 /*#/#*//*#i6.i60.image.css:image/base/css*/
 #i60 { opacity: 1; }
@@ -754,10 +754,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i68 { opacity: 1;}
 /*#/#*//*#i68.i69.positioning.css:positioning/base/css.1*/
 #i68 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 87px; height:32px;
-        -ms-transform: translate(0, 0) translate(240px, 218px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(240px, 218px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(240px, 218px) rotate(0deg);
-        transform: translate(0, 0) translate(240px, 218px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(208px, 218px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(208px, 218px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(208px, 218px) rotate(0deg);
+        transform: translate(0, 0) translate(208px, 218px) rotate(0deg);
 }
 /*#/#*//*#i6.i99.shape.css:shape/base/css*/
 #i99 { background-color: #dedede; opacity: 0.00;
@@ -877,12 +877,29 @@ document.getElementById('i91').addEventListener('click', function(e){
     window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.realmadrid.com/area-vip'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
+/*#/#*//*#i4.i50.actions.js:actions/base/js*/
+/* Name: On Click; */
+document.getElementById('i4').addEventListener('click', function(e){
+    /*#i50.i51.actions-clicktag.js:actions-clicktag/base/js.1*/
+    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
+/*#/#*//*#i5.i58.image.js:image/base/js*/
+
+/*#/#*//*#i5.i66.image.js:image/base/js*/
 
 /*#/#*//*#i95.i108.actions.js:actions/base/js*/
 /* Name: On Click; */
 document.getElementById('i95').addEventListener('click', function(e){
     /*#i108.i109.actions-clicktag.js:actions-clicktag/base/js.1*/
     window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.realmadrid.com/area-vip'), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
+/*#/#*//*#i5.i52.actions.js:actions/base/js*/
+/* Name: On Click; */
+document.getElementById('i5').addEventListener('click', function(e){
+    /*#i52.i53.actions-clicktag.js:actions-clicktag/base/js.1*/
+    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*//*#i6.i60.image.js:image/base/js*/
@@ -896,6 +913,14 @@ document.getElementById('i99').addEventListener('click', function(e){
     window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'https://www.realmadrid.com/area-vip'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
+/*#/#*//*#i6.i54.actions.js:actions/base/js*/
+/* Name: On Click; */
+document.getElementById('i6').addEventListener('click', function(e){
+    /*#i54.i55.actions-clicktag.js:actions-clicktag/base/js.1*/
+    window.mraid ? mraid.open(Adform.getClickURL('')) : window.open(dhtml.getVar('', ''), dhtml.getVar('landingPageTarget', '_blank'));
+/*#/#*/
+});
+/*#/#*/
 
   function next(){
              cube_i2.rotate(cube_i2.ROTATE_NEXT)
