--- a/Midas/fade.html
+++ b/Midas/fade.html
@@ -252,7 +252,7 @@
                 <div class="bzm_cover bg cover-2 carousel-item1 item-2"></div>
                 <div class="bzm_cover bg cover-3 carousel-item1 item-3"></div>
             </div>
-            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000;line-height:1;font-size:19px;">¿Donde hacer la revision del coche antes de salir de vacaciones?</span></div>
+            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000;line-height:1;font-size:19px;">¿Dónde hacer la revision del coche antes de salir de vacaciones?</span></div>
             <div style="bottom:0px;height: 26px;text-align:right;margin-top:-20px;"> 
               <img src="https://i.imgur.com/jOh1dFA.png" style="height:45px;margin-right:20px;">
             </div>
