--- a/Midas/Cube3d.html
+++ b/Midas/Cube3d.html
@@ -809,7 +809,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i24.text.html:text/html-->
-<div id="i24">¿Dónde hacer la revision del coche antes de salir de vacaciones?</div>
+<div id="i24">¿Dónde hacer la revisión del coche antes de salir de vacaciones?</div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
 <img id="i58" src="https://i.imgur.com/9FEAkvT.jpg"/>
 <!--#/#--><!--#i5.i66.image.html:image/html-->
