--- a/RealMadrid/fadeEng.html
+++ b/RealMadrid/fadeEng.html
@@ -241,6 +241,12 @@
             -webkit-transition: all .5s;
             -o-transition: all .5s
         }
+        
+        @media screen and (max-width:480px) {
+            .bzm_text_title {
+                font-size: 16px!important;
+            }
+        }
     </style>
 </head>
 
