--- a/petrobras/fade.html
+++ b/petrobras/fade.html
@@ -139,18 +139,18 @@ font-family: 'Seat'
         .ClaroColombiaFade .bzm_text_medium {
             font-size: 14px;
             font-weight: 500;
-            line-height: 1.7
+            line-height: 100%
         }
 
         .ClaroColombiaFade .bzm_text_bold {
             font-size: 18px;
             font-weight: 700;
-            line-height: 1
+            line-height: 100%
         }
 
         .ClaroColombiaFade .bzm_text_small {
             font-size: 10px;
-            line-height: 1
+            line-height: 100%
         }
 
         .ClaroColombiaFade .carousel-wrapper {
@@ -305,7 +305,7 @@ font-family: 'Seat'
                 <div class="bzm_cover bg cover-3 carousel-item1 item-3"></div>
             </div>
             <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000;line-height:1;font-size:24px; font-family:'Seat';">¡Vive la fiebre tricolor!</span></div>
-            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000;line-height:1;font-size:14px; font-family:'Seat';">Compra un mínimo de $30.000 en Petrobras más un valor adicional y adquiere balones, gorras y cantimploras.</span></div>
+            <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#000;line-height:1;font-size:14px; font-family:Source Sans Pro;">Compra un mínimo de $30.000 en Petrobras más un valor adicional y adquiere balones, gorras y cantimploras.</span></div>
             <div style="bottom:0px;height: 26px;text-align:right; margin-top:-3px"> 
               <img src="https://i.imgur.com/FvRVjdT.png" style="height:22px;margin-right:5px">
             </div>
