Added media to bzm_title Changed font size

--- a/Tecnisistemas/video.html
+++ b/Tecnisistemas/video.html
@@ -39,14 +39,20 @@
 		.TecnisisVideo #botones-para-compartir { text-align:right;}.likedini:hover, .facebooki:hover, .twitteri:hover, .googlei:hover,.pinteresti:hover {border-radius:25px 25px 25px 25px;transition:all .3s ease-out;box-shadow: 0px 0px 5px #000; /* Sombra */-moz-transition: all .5s;-webkit-transition: all .5s;-o-transition: all .5s;}.likedini, .facebooki, .twitteri, .googlei, .pinteresti {transition:all .3s ease-out;-moz-transition: all .5s;-webkit-transition: all .5s;-o-transition: all .5s;}
 
 		.TecnisisVideo .logo {
-        width: 41%;
-		z-index: 2;
-		float: right;
-		height: 30px;
-		text-align: center;
-		margin-top: 0px;
-		margin-right: -5px
-			}
+            width: 41%;
+            z-index: 2;
+            float: right;
+            height: 30px;
+            text-align: center;
+            margin-top: 0px;
+            margin-right: -5px
+        }
+         
+        @media screen and (max-width:480px) {
+            .bzm_text_title {
+                font-size: 16px!important;
+            }
+        }
 
 	 </style>
 </head>
@@ -64,7 +70,7 @@
 			</div>
 		</div>
 			<div class="bzm_text">
-				<span class="bzm_text_title  bzm_text_bold" style="font-size:27px; color:#000;">¿Aún no hablas inglés? Decídete y lo hablarás.</span>
+				<span class="bzm_text_title  bzm_text_bold" style="font-size:22px; color:#000;">¿Aún no hablas inglés? Decídete y lo hablarás.</span>
 				
 			</div>
 
