--- a/Tecnisistemas/slider.html
+++ b/Tecnisistemas/slider.html
@@ -236,7 +236,7 @@
                     <div class="te-back"></div>
                 </div>
                 <div style="margin-top:10px; margin-left: 10px; margin-right: 10px;">
-                    <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#2d363b; font-size:20px; text-align: center;">Matriculate en este programa de Inglés y por fin podrás hablar inglés.</span> <img class="logo" src="https://i.imgur.com/RwfoGIs.jpg" alt=""> </div>
+                    <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="color:#2d363b; font-size:20px; text-align: center;">Matricúlate en este programa de Inglés y por fin podrás hablar inglés.</span> <img class="logo" src="https://i.imgur.com/RwfoGIs.jpg" alt=""> </div>
                 </div>
             </div>
         </a>
