Correccion de imagenes y color

--- a/petrobras/slider.html
+++ b/petrobras/slider.html
@@ -119,12 +119,12 @@
 		<a href="http://www.petrobras.com/es/paises/colombia/promociones/" target="_blank">
 			<div id="te-wrapper" class="te-wrapper">
 				<div class="te-images">
-					<img src="https://i.imgur.com/90CWF96.jpg" alt="" />
-					<img src="https://i.imgur.com/sdFFEyD.jpg" alt="" />
-					<img src="https://i.imgur.com/cjYnOjW.jpg" alt="" />
+					<img src="https://i.imgur.com/cScHApz.jpg" alt="" />
+					<img src="https://i.imgur.com/jsyIiFn.jpg" alt="" />
+					<img src="https://i.imgur.com/5Qavw17.jpg" alt="" />
 				</div>
 				<div class="te-cover">
-					<img src="https://i.imgur.com/90CWF96.jpg" alt="" />
+					<img src="https://i.imgur.com/cScHApz.jpg" alt="" />
 				</div>
 				<div class="te-transition">
 					<div class="te-front"></div>
@@ -132,11 +132,11 @@
 				</div>
 				<div style="padding-left: 5px;padding-top:2px;padding-right:5px;">
 					<div class="bzm_text">
-						<span class="bzm_text_title  bzm_text_bold" style="font-family:'petrobras'; color:#605e5e; line-height:1.1; font-size:24px; text-align:left; margin-bottom: 0px">
+						<span class="bzm_text_title  bzm_text_bold" style="font-family:'petrobras'; color:#000; line-height:1.1; font-size:24px; text-align:left; margin-bottom: 0px">
 						   ¡Vive la fiebre tricolor!
 						</span><br>
 						
-						<span class="bzm_text_title  bzm_text_bold" style="color:#605e5e; font-size:14px; text-align:left; margin-bottom: 0px">
+						<span class="bzm_text_title  bzm_text_bold" style="color:#000; font-size:14px; text-align:left; margin-bottom: 0px">
 						 Compra un mínimo de $30.000 en Petrobras más un valor adicional y adquiere balones, gorras y cantimploras.
 						</span>
 						
