--- a/petrobras/slider.html
+++ b/petrobras/slider.html
@@ -140,9 +140,9 @@
 						   ¡Vive la fiebre tricolor!
 						</span><br>
 						
-						<span class="bzm_text_title  bzm_text_bold" style="color:#000; font-size:14px; text-align:left; margin-bottom: 0px">
+						<span class="bzm_text_title  bzm_text_bold" style="font-family:'PetrobrasSans_Bd'; color:#000; font-size:14px; text-align:left; margin-bottom: 0px"><i>
 						 Compra un mínimo de $30.000 en Petrobras más un valor adicional y adquiere balones, gorras y cantimploras.
-						</span>
+						</i></span>
 						
 						<div style="bottom:0px;height: 1px;text-align:left;margin-top:6px;">
 			               <div class="logo">
