Changed Margin top and Line height in slider

--- a/petrobras/slider.html
+++ b/petrobras/slider.html
@@ -30,7 +30,7 @@
 			font-family:Source Sans Pro		
 		}
           .InkabetSlide .bzm_text {
-              margin-top: -3px;
+              margin-top: 3px;
               margin-bottom: 0px;
               margin-left: 0px;
               text-align: left;
@@ -136,11 +136,11 @@
 				</div>
 				<div style="padding-left: 5px;padding-top:2px;padding-right:5px;">
 					<div class="bzm_text">
-						<span class="bzm_text_title  bzm_text_bold" style="font-family:'PetrobrasSans_Bd'; color:#000; line-height:1.1; font-size:24px; text-align:left; margin-bottom: 0px">
+						<span class="bzm_text_title  bzm_text_bold" style="font-family:'PetrobrasSans_Bd'; color:#000; line-height:1.2; font-size:24px; text-align:left;">
 						   ¡Vive la fiebre tricolor!
 						</span><br>
 						
-						<span class="bzm_text_title  bzm_text_bold" style="font-family:'PetrobrasSans_Bd'; color:#000; font-size:14px; text-align:left; margin-bottom: 0px"><i>
+						<span class="bzm_text_title  bzm_text_bold" style="font-family:'PetrobrasSans_Bd'; color:#000; font-size:14px; text-align:left;"><i>
 						 Compra un mínimo de $30.000 en Petrobras más un valor adicional y adquiere balones, gorras y cantimploras.
 						</i></span>
 						
