--- a/petrobras/fade.html
+++ b/petrobras/fade.html
@@ -263,7 +263,7 @@
                 <div class="bzm_cover bg cover-3 carousel-item1 item-3"></div>
             </div>
             <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="font-family:'PetrobrasSans_Bd';color:#000;line-height:100%;font-size:24px;">¡Vive la fiebre tricolor!</span></div>
-             <div class="bzm_text"> <span class="bzm_text_title bzm_text_bold" style="font-family:'PetrobrasSans_Bd'; color:#000;line-height:100%;font-size:14px;"><i>Compra un mínimo de $30.000 en Petrobras más un valor adicional y adquiere balones, gorras y cantimploras.</i></span></div>
+             <div class="bzm_text" style="margin-top:-2.5px;"> <span class="bzm_text_title bzm_text_bold" style="font-family:'PetrobrasSans_Bd'; color:#000;line-height:100%;font-size:14px;"><i>Compra un mínimo de $30.000 en Petrobras más un valor adicional y adquiere balones, gorras y cantimploras.</i></span></div>
             <div style="bottom:0px;height: 26px;text-align:right;margin-top:-8px;"> 
               <img src="https://i.imgur.com/FvRVjdT.png" style="height:22px;margin-right:0px;">
             </div>
