Added Rusia slide format Changed fijo1 format

--- a/Rusia/fijo1.html
+++ b/Rusia/fijo1.html
@@ -17,7 +17,7 @@
             width: 300px;
             height: 250px;
             margin: 0 auto;
-            background-color: #f1f1f1;
+            background-color: #ffffff;
         }
 
         .RusiaFijo1 .te-wrapper {
@@ -181,7 +181,7 @@
             position: absolute;
             cursor: pointer;
             opacity: 1;
-            background-color: rgba(6, 33, 87, 1);
+            background-color: rgb(157, 50, 177);
             font-family: "Source Sans Pro";
             font-size: 14px;
             color: #ffffff;
@@ -217,18 +217,18 @@
         <a href="%%c1;cpdir=" target="_blank">
             <div id="te-wrapper" class="te-wrapper">
                 <div class="te-images"> <img src="https://i.imgur.com/XwbKSj5.jpg" alt="" /> <img src="https://i.imgur.com/XwbKSj5.jpg" alt="" /> <img src="https://i.imgur.com/XwbKSj5.jpg" alt="" /> </div>
-                <div class="te-cover"> <img src="https://i.imgur.com/XwbKSj5.jpg" alt="" /> </div>
+                <div class="te-cover"> <img src="https://i.imgur.com/nFDnvtu.jpg" alt="" /> </div>
                 <div class="te-transition">
                     <div class="te-front"></div>
                     <div class="te-back"></div>
                 </div>
                 <div style="margin-top:-5px; margin-left: 10px; margin-right: 10px;">
                     <div class="bzm_text">
-                        <span class="bzm_text_title  bzm_text_bold" style="float:left; color:#2d363b;line-height:1.1; font-size:18px;">
-						    Renovamos nuestra imagen. Conoce el nuevo Bancomer.com
+                        <span class="bzm_text_title  bzm_text_bold" style="float:left; color:#2d363b;line-height:1.1; font-size:16px;">
+						    No te pierdas ningún partido de estos cracks. Rusia Total sólo por SKY
 						</span>
-                        <img class="logo" src="https://i.imgur.com/JTmm9Rf.png" alt="">
-                        <button class="ctaButton" type="button">Conocer más</button>
+                        <img class="logo" src="https://i.imgur.com/vN4XSwS.png" alt="">
+                        <button class="ctaButton" type="button">Más Info</button>
                     </div>
                 </div>
             </div>
