CHanged color rgb to hex in fijo1

--- a/Rusia/fijo1.html
+++ b/Rusia/fijo1.html
@@ -181,7 +181,7 @@
             position: absolute;
             cursor: pointer;
             opacity: 1;
-            background-color: rgb(157, 50, 177);
+            background-color: #9d32b1;
             font-family: "Source Sans Pro";
             font-size: 14px;
             color: #ffffff;
