--- a/Rusia/slider.html
+++ b/Rusia/slider.html
@@ -10,7 +10,7 @@
     <script type="text/javascript">
         function adfOpenGlobalClickTAG() {
             var adfClickTAGName = 'clickTAG',
-                adfClickTAGUrl = 'http://track.adform.net/C/?bn=22512744';
+                adfClickTAGUrl = 'http://www.sky.com.mx/contrata/pdi/#utm_source=mosaic&utm_medium=creativa_int';
 
             window.open(dhtml.getVar(adfClickTAGName, adfClickTAGUrl), dhtml.getVar('landingPageTarget', '_blank'));
         }
