Changed Button ref Changed Sky logo

--- a/Rusia/fijo1.html
+++ b/Rusia/fijo1.html
@@ -210,7 +210,6 @@
         }
 
         .RusiaFijo1 .logo {
-            width: 53px;
             z-index: 2;
             background-color: transparent;
             border-radius: 0px;
@@ -271,8 +270,8 @@
                         <span class="bzm_text_title  bzm_text_bold" style="float:left; color:#2d363b;line-height:1.1; font-size:16px;">
 						    No te pierdas ningún partido de estos cracks. Rusia Total sólo por SKY
 						</span>
-                        <img class="logo" src="https://i.imgur.com/vN4XSwS.png" alt="">
-                        <button class="ctaButton" type="button">Más Info</button>
+                        <img class="logo" src="https://i.imgur.com/sJd7KSE.png" alt="">
+                        <button class="ctaButton" type="button">Ver más</button>
                     </div>
                 </div>
             </div>
