--- a/Rusia/fijo3.html
+++ b/Rusia/fijo3.html
@@ -209,7 +209,6 @@
         }
 
         .RusiaFijo1 .logo {
-            width: 53px;
             z-index: 2;
             background-color: transparent;
             border-radius: 0px;
@@ -270,8 +269,8 @@
                         <span class="bzm_text_title  bzm_text_bold" style="float:left; color:#000;line-height:1.1; font-size:16px;">
 						¿Y tú, ya estás listo para ver todos los partidos del Mundial?
 						</span>
-                        <img class="logo" src="https://i.imgur.com/vN4XSwS.png" alt="">
-                        <button class="ctaButton" type="button">Más info</button>
+                        <img class="logo" src="https://i.imgur.com/sJd7KSE.png" alt="">
+                        <button class="ctaButton" type="button">Ver más</button>
                     </div>
                 </div>
             </div>
