--- a/Mattel/Cube3d.html
+++ b/Mattel/Cube3d.html
@@ -580,13 +580,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
 /*#/#*//*#i5.i24.text.css:text/base/css*/
-#i24 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 24px; color: #666565; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: 10px; margin-right: 10px}
+#i24 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 24px; color: #5c5c5c; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: 10px; margin-right: 10px}
 /*#/#*//*#i24.i25.positioning.css:positioning/base/css.1*/
 #i24 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 299px; height: 61px;
-        -ms-transform: translate(-50%, -50%) translate(1px, 57px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(1px, 57px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(1px, 57px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(1px, 57px) rotate(0deg);
+        -ms-transform: translate(-50%, -50%) translate(8px, 57px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(8px, 57px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(8px, 57px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(8px, 57px) rotate(0deg);
 }
 /*#/#*//*#i5.i58.image.css:image/base/css*/
 #i58 { opacity: 1; }
@@ -747,7 +747,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i91 { background-color: #dedede; opacity: 0.00;
 }
 /*#/#*//*#i4.i14.text.css:text/base/css*/
-#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 24px; color: #6b6767; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: 10px;}
+#i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 24px; color: #5e5e5e; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: 10px;}
 /*#/#*//*#i20.i21.positioning.css:positioning/base/css.1*/
 #i20 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
         -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
@@ -797,13 +797,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
 /*#/#*//*#i6.i34.text.css:text/base/css*/
-#i34 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 24px; color: #706f6f; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: 0px;}
+#i34 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 24px; color: #666666; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: 0px;}
 /*#/#*//*#i34.i35.positioning.css:positioning/base/css.1*/
 #i34 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 300px; height: 55px;
-        -ms-transform: translate(-50%, -50%) translate(1px, 65px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(1px, 65px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(1px, 65px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(1px, 65px) rotate(0deg);
+        -ms-transform: translate(-50%, -50%) translate(10px, 65px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(10px, 65px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(10px, 65px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(10px, 65px) rotate(0deg);
 }
 /*#/#*//*#i6.i60.image.css:image/base/css*/
 #i60 { opacity: 1; }
