--- a/petrobras/slider.html
+++ b/petrobras/slider.html
@@ -136,19 +136,22 @@
 				</div>
 				<div style="padding-left: 5px;padding-top:2px;padding-right:5px;">
 					<div class="bzm_text">
-						<span class="bzm_text_title  bzm_text_bold" style="font-family:'PetrobrasSans_Bd'; color:#000; line-height:1.2; font-size:24px; text-align:left;">
+						<span class="bzm_text_title  bzm_text_bold" style="font-family:'PetrobrasSans_Bd'; color:#000; line-height:1.2; font-size:18px; text-align:left;">
 						   ¡Vive la fiebre tricolor!
 						</span><br>
 						
-						<span class="bzm_text_title  bzm_text_bold" style="font-family:'PetrobrasSans_Bd'; color:#000; font-size:11.5px; text-align:left;"><i>
+						<span style="font-family:'PetrobrasSans_Bd'; line-height:100%; color:#000; font-size:10px; text-align:left;"><i>
 						 Compra un mínimo de $30.000 en Petrobras más un valor adicional y adquiere balones, gorras y cantimploras.
 						</i></span>
 						
 						<div style="bottom:0px;height: 1px;text-align:left;margin-top:15px;">
 			               <div class="logo">
-									<img src="https://i.imgur.com/FvRVjdT.png" style="height:21px">
-
-					</div>
+								<img src="https://i.imgur.com/FvRVjdT.png" style="height:21px">
+                            </div>
+					    </div>
+                    </div>
+                </div>
+            </div>
 		</a>
 	</div> 
 
