--- a/petrobras/slider.html
+++ b/petrobras/slider.html
@@ -144,7 +144,7 @@
 						 Compra un mínimo de $30.000 en Petrobras más un valor adicional y adquiere balones, gorras y cantimploras.
 						</i></span>
 						
-						<div style="bottom:0px;height: 1px;text-align:left;margin-top:15px;">
+						<div style="text-align:left;margin-top:25px;">
 			               <div class="logo">
 								<img src="https://i.imgur.com/FvRVjdT.png" style="height:21px">
                             </div>
