--- a/chicco/slider.html
+++ b/chicco/slider.html
@@ -41,7 +41,7 @@
 
         .AmericanSlide .bzm_text_bold,
         .AmericanSlide .bzm_text_medium {
-            line-height: 1.4;
+            line-height: 100%;
             text-decoration: none;
             color: #000;
          
@@ -50,7 +50,7 @@
         .AmericanSlide .bzm_text_bold {
             font-size: 19px;
             font-weight: 700;
-            line-height: 1;
+            line-height: 100%;
            
         }
 
@@ -73,7 +73,7 @@
         .AmericanSlide .te-cover,
         .AmericanSlide .te-transition {
             width: 300px;
-            height: 170px;
+            height: 160px;
         }
 
         .AmericanSlide .te-cover.te-hide,
@@ -84,13 +84,13 @@
 
         .AmericanSlide .te-images {
             width: 300px;
-            height: 170px;
+            height: 160px;
         }
 
         .AmericanSlide .te-cover>img,
         .AmericanSlide .te-images>img {
             width: 300px;
-            height: 170px;
+            height: 160px;
         }
 
         .AmericanSlide .te-transition.te-show {
