correccion de imagenes cubo

--- a/chicco/BlueCube.html
+++ b/chicco/BlueCube.html
@@ -470,7 +470,14 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#-->
 <!--#/#--><!--#css:common/css-->
 <style>
-/*#cube.css:cube/globalcss.1*/
+/*#i58.i59.positioning.css:positioning/base/css.1*/
+#i58 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 313px; height: 167px;
+        -ms-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
+}
+/*#/#*//*#cube.css:cube/globalcss.1*/
 
 .transformation {
     -webkit-transform: translateZ(-1000px);
@@ -599,29 +606,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     background-color: #5AAAD2;
 }
 
-/*#/#*//*#i2.cube.css:cube/base/css.1*/
-#i2.shape-holder {
-    position: absolute;
-
-    -ms-touch-action: none;
-    background: transparent;
-
-    opacity: 0;
-    -webkit-transition: opacity 0.5s;
-    -o-transition: opacity 0.5s;
-    -moz-transition: opacity 0.5s;
-    transition: opacity 0.5s, scale 0.8s;
-}
-
-#i2 .cube-Panel {
-    -webkit-backface-visibility:hidden;
-    -moz-backface-visibility:hidden;
-    -ms-backface-visibility: visible;
-    backface-visibility:hidden;
-    background-size: cover;
-    overflow: hidden;
-}
-
 /*#/#*//*#i4.i20.shape.css:shape/base/css*/
 #i20 { background-color: #fafafa; opacity: 1;
 }
@@ -636,15 +620,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i14 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 18px; color: #595959; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -5px;}
 /*#/#*//*#i14.i15.positioning.css:positioning/base/css.1*/
 #i14 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 280px; height: 77px;
-        -ms-transform: translate(-50%, -50%) translate(0px, 79px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(0px, 79px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(0px, 79px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(0px, 79px) rotate(0deg);
+        -ms-transform: translate(-50%, -50%) translate(0px, 80px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(0px, 80px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(0px, 80px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(0px, 80px) rotate(0deg);
 }
 /*#/#*//*#i4.i130.image.css:image/base/css*/
 #i130 { opacity: 1; }
 /*#/#*//*#i130.i131.positioning.css:positioning/base/css.1*/
-#i130 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 160px;
+#i130 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 311px; height: 166px;
         -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
@@ -694,13 +678,29 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 }
 /*#/#*//*#i5.i58.image.css:image/base/css*/
 #i58 { opacity: 1; }
-/*#/#*//*#i58.i59.positioning.css:positioning/base/css.1*/
-#i58 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 160px;
-        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+/*#/#*//*#i2.cube.css:cube/base/css.1*/
+#i2.shape-holder {
+    position: absolute;
+
+    -ms-touch-action: none;
+    background: transparent;
+
+    opacity: 0;
+    -webkit-transition: opacity 0.5s;
+    -o-transition: opacity 0.5s;
+    -moz-transition: opacity 0.5s;
+    transition: opacity 0.5s, scale 0.8s;
 }
+
+#i2 .cube-Panel {
+    -webkit-backface-visibility:hidden;
+    -moz-backface-visibility:hidden;
+    -ms-backface-visibility: visible;
+    backface-visibility:hidden;
+    background-size: cover;
+    overflow: hidden;
+}
+
 /*#/#*//*#i5.i185.image.css:image/base/css*/
 #i185 { opacity: 1; }
 /*#/#*//*#i185.i186.positioning.css:positioning/base/css.1*/
@@ -734,23 +734,23 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
-/*#/#*//*#i6.i34.text.css:text/base/css*/
-#i34 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 18px; color: #5e5e5e; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px;}
 /*#/#*//*#i34.i35.positioning.css:positioning/base/css.1*/
 #i34 { position: absolute; top: 50%; left: 50%; overflow: hidden; width: 285px; height: 55px;
-        -ms-transform: translate(-50%, -50%) translate(0px, 66px) rotate(0deg);
-        -webkit-transform: translate(-50%, -50%) translate(0px, 66px) rotate(0deg);
-        -moz-transform: translate(-50%, -50%) translate(0px, 66px) rotate(0deg);
-        transform: translate(-50%, -50%) translate(0px, 66px) rotate(0deg);
+        -ms-transform: translate(-50%, -50%) translate(0px, 67px) rotate(0deg);
+        -webkit-transform: translate(-50%, -50%) translate(0px, 67px) rotate(0deg);
+        -moz-transform: translate(-50%, -50%) translate(0px, 67px) rotate(0deg);
+        transform: translate(-50%, -50%) translate(0px, 67px) rotate(0deg);
 }
+/*#/#*//*#i6.i34.text.css:text/base/css*/
+#i34 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Source Sans Pro"; font-size: 18px; color: #5e5e5e; font-weight: bold; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(255,255,255,0); margin-top: -3px;}
 /*#/#*//*#i6.i60.image.css:image/base/css*/
 #i60 { opacity: 1; }
 /*#/#*//*#i60.i61.positioning.css:positioning/base/css.1*/
-#i60 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 160px;
-        -ms-transform: translate(0, 0) translate(0px, 1px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 1px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 1px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 1px) rotate(0deg);
+#i60 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 315px; height: 168px;
+        -ms-transform: translate(0, 0) translate(0px, -3px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, -3px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, -3px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, -3px) rotate(0deg);
 }
 /*#/#*//*#i6.i187.image.css:image/base/css*/
 #i187 { opacity: 1; }
