Cambio de imagen numero 3

--- a/chicco/BlueCube.html
+++ b/chicco/BlueCube.html
@@ -746,11 +746,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i6.i60.image.css:image/base/css*/
 #i60 { opacity: 1; }
 /*#/#*//*#i60.i61.positioning.css:positioning/base/css.1*/
-#i60 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 315px; height: 168px;
-        -ms-transform: translate(0, 0) translate(0px, -6px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, -6px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, -6px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, -6px) rotate(0deg);
+#i60 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 313px; height: 164px;
+        -ms-transform: translate(0, 0) translate(0px, -2px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, -2px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, -2px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, -2px) rotate(0deg);
 }
 /*#/#*//*#i6.i187.image.css:image/base/css*/
 #i187 { opacity: 1; }
@@ -768,10 +768,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i99 { cursor: pointer; }
 /*#/#*//*#i99.i100.positioning.css:positioning/base/css.1*/
 #i99 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 100%;
-        -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(8px, 10px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(8px, 10px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(8px, 10px) rotate(0deg);
+        transform: translate(0, 0) translate(8px, 10px) rotate(0deg);
 }
 /*#/#*//*#i54.i55.actions-clicktag.css:actions-clicktag/base/css.1*/
 #i6 { cursor: pointer; }
@@ -825,7 +825,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i6.i34.text.html:text/html-->
 <div id="i34">¡Las ofertas más esperadas del año! Aprovecha hasta el 35% de descuento y 12 meses sin intereses</div>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
-<img id="i60" src="https://i.imgur.com/7pDYetR.jpg"/>
+<img id="i60" src="https://i.imgur.com/pLZiaWn.jpg"/>
 <!--#/#--><!--#i6.i187.image.html:image/html-->
 <img id="i187" src="https://i.imgur.com/Pe68lXf.png"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
