--- a/chicco/slider.html
+++ b/chicco/slider.html
@@ -189,7 +189,7 @@
 	 <div class="te-container">
         <a href="https://fisher-price.mattel.com/shop/en-us/fp/72353?_ga=2.54908399.571670796.1527271848-1164650391.1527271848" target="_blank">
             <div id="te-wrapper" class="te-wrapper">
-                <div class="te-images"> <img src="https://i.imgur.com/7pDYetR.jpg" alt="" /> <img src="https://i.imgur.com/5qTwDuT.jpg" alt="" /> <img src="https://i.imgur.com/11enlmB.jpg" alt="" /> </div>
+                <div class="te-images"> <img src="https://i.imgur.com/7pDYetR.jpg" alt="" /> <img src="https://i.imgur.com/5qTwDuT.jpg" alt="" /> <img src="https://i.imgur.com/U0gGAWE.jpg" alt="" /> </div>
                 <div class="te-cover"> <img src="https://i.imgur.com/7pDYetR.jpg" alt="" /> </div>
                 <div class="te-transition">
                     <div class="te-front"></div>
